<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Hombre">

    <ImageView
        android:id="@+id/imageViewHombre"
        android:layout_width="261dp"
        android:layout_height="234dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chico" />

    <EditText
        android:id="@+id/editTextPeso"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="#F4F1F1"
        android:ems="10"
        android:hint="@string/Peso"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHombre" />

    <EditText
        android:id="@+id/editTextEstatura"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="#F4F1F1"
        android:ems="10"
        android:hint="@string/Estatura"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPeso" />

    <EditText
        android:id="@+id/editTextEdad"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="#F4F1F1"
        android:ems="10"
        android:hint="@string/Edad"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEstatura" />

    <TextView
        android:id="@+id/textViewCalorias"
        android:layout_width="217dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FDFBFB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEdad" />

    <TextView
        android:id="@+id/textViewCalorias2"
        android:layout_width="362dp"
        android:layout_height="119dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F80707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculo"
        app:layout_constraintVertical_bias="0.112" />

    <Button
        android:id="@+id/buttonCalculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#2196F3"
        android:onClick="CalcularHombre"
        android:text="@string/Calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCalorias" />

    <TextView
        android:id="@+id/textViewCalorias3"
        android:layout_width="312dp"
        android:layout_height="37dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCalorias2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewcedhom"
        android:layout_width="115dp"
        android:layout_height="33dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>